# vega-protocol-market-maker-python

./: .env.sample  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
client/api/: vega_api_client.py
client/ws/: binance_web_socket_client.py  vega_web_socket_client.py
market_maker/: config.py  models.py  submission.py  wallet.py
market_maker/client/api/: parsers.py  vega_api_client.py
market_maker/client/gql/: vega_graphql_client.py
market_maker/client/ws/: vega_web_socket_client.py
market_maker/store/: binance_store.py  vega_store.py
market_maker/strategy/: base.py  simple_market_maker.py
market_maker/utils/: decimal_utils.py
model/: account.py  app_state.py  asset.py  config.py  market.py  order.py  position.py  reference_price.py
store/: binance_store.py  vega_store.py
strategy/: simple_market_maker.py
submission/: batch_market_instruction.py  order_amendment.py  order_cancellation.py  order_submission.py
utils/: decimal_utils.py
